# ree-code

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: tests.yml
configs/: algorithm_a_demo.json  null_compute_demo.json
data/: README.md
docs/: REPRODUCIBILITY.md  SCIENTIFIC_SCOPE.md
examples/: appendixN_horizon_policies.py  null_compute_ledger_demo.py  p7_target_demo.py  structured_efficiency_toy3d.py
notebooks/: README.md
ree-code-v0.1.0/: CHANGELOG.md  CITATION.cff  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
ree-code-v0.1.0/configs/: readout_demo.json
ree-code-v0.1.0/docs/: PACKAGE_MAP.md
ree-code-v0.1.0/examples/: front_demo.py  readout_demo.py  registry_demo.py
ree-code-v0.1.0/results/reference/: front_demo_summary.json  p7_target.csv  readout_demo.json
ree-code-v0.1.0/src/ree/: __init__.py
ree-code-v0.1.0/src/ree/algorithm_a/: __init__.py  model.py
ree-code-v0.1.0/src/ree/discriminators/: __init__.py  phase.py  targets.py
ree-code-v0.1.0/src/ree/null_compute/: __init__.py
ree-code-v0.1.0/src/ree/readout/: maps.py
ree-code-v0.1.0/src/ree/reproducibility/: manifest.py
ree-code-v0.1.0/tests/: test_algorithm_a.py  test_ledger.py  test_manifest.py  test_readout.py
results/reference/: README.md  null_compute_ledger_demo.json  register_v0.1.0.json
src/ree/: cli.py
src/ree/discriminators/: registry.py
src/ree/null_compute/: ledger.py
src/ree/readout/: __init__.py
src/ree/reproducibility/: __init__.py
tests/: test_discriminators.py
