[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ree-code"
version = "0.1.0"
description = "Reference implementations and reproducibility tools for Recursive Epistemic Economy (REE)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Mats J Lundqvist" }
]
keywords = [
  "recursive epistemic economy",
  "structured efficiency",
  "finite-resource physics",
  "reproducibility",
  "cosmology"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.9"
]

[project.urls]
Homepage = "https://www.ree-framework.org/"
Repository = "https://github.com/REE-Framework/ree-code"
Issues = "https://github.com/REE-Framework/ree-code/issues"

[project.scripts]
ree = "ree.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
